* I added support for generating vanilla HTML elements.
* I moved the MudBlazor support into a separate NUGET package.

* I rewrote the demo to better display the capabilities of the library.

--- a/samples/CG.Blazor.Forms.QuickStart/Shared/NavMenu.razor
+++ b/samples/CG.Blazor.Forms.QuickStart/Shared/NavMenu.razor
@@ -1,3 +1,4 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="/demo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Web">Demo</MudNavLink>
 </MudNavMenu>
