--- a/samples/CG.Blazor.Forms.QuickStart/_Imports.razor
+++ b/samples/CG.Blazor.Forms.QuickStart/_Imports.razor
@@ -12,6 +12,6 @@
 
 @using CG.Blazor.Forms.QuickStart
 @using CG.Blazor.Forms.QuickStart.Shared
-@using CG.Blazor.Forms.QuickStart.Models
+@using CG.Blazor.Forms.QuickStart.ViewModels
 
 @using MudBlazor
