* I added the ability to render child content for the DynamicForm component.

--- a/src/CG.Blazor.Forms/DynamicForm.razor
+++ b/src/CG.Blazor.Forms/DynamicForm.razor
@@ -14,7 +14,15 @@
                   OnInvalidSubmit="@OnInvalidSubmit" 
                   OnValidSubmit="@OnValidSubmit"
                   OnSubmit="@OnSubmit">
+            @if (!ChildContentAfter)
+            {
+                @ChildContent
+            }
             @GenerateFormBody()
+            @if (ChildContentAfter)
+            {
+                @ChildContent
+            }
             <br />
             <div class="dynamic-form-buttons">
                 <button class="btn dynamic-form-submit" type="submit">Submit</button>
