updated nuget refs

--- a/samples/CG.Blazor.Forms.QuickStart/Pages/Index.razor
+++ b/samples/CG.Blazor.Forms.QuickStart/Pages/Index.razor
@@ -1,16 +1,16 @@
 ﻿@page "/"
 
-<MudText Typo="Typo.h4">CG.Forms.Blazor Demo</MudText>
+<MudText Typo="Typo.h4">CG.Blazor.Forms Demo</MudText>
 <MudText Typo="Typo.body1">This application demonstates some of the capabilities of the library.</MudText>
 
 <div class="container">
     <MudText Class="pt-5" Typo="Typo.h6">Capabilities</MudText>
     <ul style="list-style-type:square">
-        <li>CG.Forms.Blazor is open-source, free to use, fast and reliable.</li>
-        <li>CG.Forms.Blazor is written in <strong>C#</strong>, <strong>ASP.NET</strong> and <strong>Blazor</strong>.</li>
-        <li>CG.Forms.Blazor leverages <strong>CODEGATOR</strong> packages, for a proven, standards driven architecture.</li>
-        <li>CG.Forms.Blazor is built on top of <strong>.NET 5.x</strong>, so it runs on multiple operating systems, without fuss.</li>
-        <li>CG.Forms.Blazor is easily extensible, to integrate with your favorite UI library.</li>
-        <li>CG.Forms.Blazor users are 68.57% more likely to win lottary in the next year. <small>(Ok, we made that one up)</small></li>
+        <li>CG.Blazor.Forms is open-source, free to use, fast and reliable.</li>
+        <li>CG.Blazor.Forms is written in <strong>C#</strong>, <strong>ASP.NET</strong> and <strong>Blazor</strong>.</li>
+        <li>CG.Blazor.Forms leverages <strong>CODEGATOR</strong> packages, for a proven, standards driven architecture.</li>
+        <li>CG.Blazor.Forms is built on top of <strong>.NET 5.x</strong>, so it runs on multiple operating systems, without fuss.</li>
+        <li>CG.Blazor.Forms is easily extensible, to integrate with your favorite UI library.</li>
+        <li>CG.Blazor.Forms users are 68.57% more likely to win lottary in the next year. <small>(Ok, we made that one up)</small></li>
     </ul>
 </div>
