I added a render fragment property for the form buttons

--- a/samples/CG.Blazor.Forms.QuickStart/Shared/NavMenu.razor
+++ b/samples/CG.Blazor.Forms.QuickStart/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="/demo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Web">Demo</MudNavLink>
+    <MudNavLink Href="/demo2" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Web">Advanced Demo</MudNavLink>
 </MudNavMenu>
